[metadata]
name = unflatten
description = Unflatten dict to dict with nested dict/arrays
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = unflatten nested-dict
url = https://github.com/dairiki/unflatten
author = Jeff Dairiki
author_email = dairiki@dairiki.org
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = unflatten
package_dir =
    =src
setup_requires =
    setuptools >= 40
    setuptools_scm

[bdist_wheel]
universal = 1

